# ai-invention-90d6bf-the-triple-shield-revisited-education-we

./: README.md
paper_latex/: paper.tex
paper_latex/workspace/: .sdk_openhands_agent_struct_out.json  paper.aux  paper.bbl  paper.blg  paper.out  references.bib
prompts/: README.md
prompts/1_create_idea/round_1/: 1_gen_hypo.md  2_review_hypo.md
prompts/2_test_idea/round_1/: 1_gen_strat.md  4_gen_paper_text.md  5_review_paper.md  6_upd_hypo.md
prompts/2_test_idea/round_2/: 1_gen_strat.md  4_gen_paper_text.md  5_review_paper.md  6_upd_hypo.md
prompts/3_report_results/: 3_gen_full_paper.md
prompts/3_report_results/1_gen_viz/: gen_viz_1.md  gen_viz_2.md  (+3 more)
round-1/dataset-1/: README.md
round-1/research-1/: README.md
round-2/dataset-1/: README.md
round-2/dataset-1/src/: .aii_cost_ledger.jsonl  .sdk_openhands_agent_struct_out.json  data.py  data_dictionary.md  data_out.json  full_data_out.json  merge_clean.py  merge_datasets.py  merge_final.py  mini_data_out.json  owid_social_spending.csv  preview_data_out.json  pyproject.toml  swiid_temp.dta
round-2/experiment-1/: README.md
round-2/experiment-1/src/: .sdk_openhands_agent_struct_out.json  check_fix_json.py  check_json_structure.py  fix_json_script.py  fix_method_out.py  fix_output_schema.py  full_method_out.json  method.py  method.py.backup  method_out.json  preview_method_out.json  pyproject.toml  requirements_filtered.txt  requirements_frozen.txt  run_full.py  run_test.py  temp_100.json  temp_50_examples.json
round-2/experiment-1/src/triple_shield_analysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+43 files in other folders)
